Replaced most of deprecated api usages